# bsc-compsci-capstone

./: .gitignore  README.md  actor_encoder.py  genre_encoder.py  imdb_movies - test.csv  main.ipynb  main.py  mainTest.ipynb  movie_data_loader.py  movie_pipeline.py  one_hot_encoder.py  pyproject.toml
.devcontainer/: devcontainer.json
example/: deadpool_prediction.ipynb  main.ipynb
src/marp/: __init__.py  actor_encoder.py  genre_encoder.py  main.py  movie_data_loader.py  movie_pipeline.py  one_hot_encoder.py  r_score.py
