[project]
name = "marp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]